<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raised_button"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top_margin"/>

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:theme="@style/normal_btn"
                android:id="@+id/normal_raised"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/normal" />


            <Button
                android:id="@+id/styled_raised"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/pressed"
                android:theme="@style/styled_raised_pressed" />

            <Button
                android:theme="@style/normal_btn"
                android:id="@+id/disable_raised"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/top_margin"
                android:enabled="false"
                android:text="@string/disabled" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat_button"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/top_margin"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <Button
                android:id="@+id/flat_normal"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/normal" />


            <Button
                android:id="@+id/styled_flat"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/top_margin"
                android:text="@string/pressed"
                android:theme="@style/flat_button_pressed" />


            <Button
                android:id="@+id/flat_disabled"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/top_margin"
                android:enabled="false"
                android:text="@string/disabled" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>